# local-stack-project-repo

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile  requirements.txt
airflow/dags/: bulk_upload_dropzone_to_s3.py  single_file_to_s3_with_spark_metrics.py
lambdas/dynamodb_ingestor/: lambda_function.py  requirements.txt
scripts/: bootstrap_localstack.py  export_tableau_data.py  package_lambda.py  run_splitter.py
src/helsinki_pipeline/: __init__.py  config.py
src/helsinki_pipeline/airflow/: __init__.py  tasks.py
src/helsinki_pipeline/aws/: __init__.py  aws_clients.py  s3_uploader.py
src/helsinki_pipeline/etl/: __init__.py  column_mapping.py  split_monthly.py
src/helsinki_pipeline/spark/: __init__.py  station_metrics_job.py
tests/: test_column_mapping.py  test_s3_uploader.py
